# birdclef2026

./: .gitignore  CONTEXT.md  README.md  USAGE.md  main.py  pyproject.toml  requirements.txt
checkpoints/: kaggle_audio_config.json  kaggle_final_metrics.json  kaggle_loading_script.py  kaggle_model_config.json
configs/: base_config.yaml  kaggle_base.yaml  kaggle_test.yaml  local_debug.yaml  local_full.yaml  precompute.yaml  stage1_pretrain.yaml  stage2_base.yaml  stage3_pseudo.yaml  stage4_finetune.yaml
experiments/: log.csv
notebooks/: 01_precompute.ipynb  kaggle_inference.ipynb  kaggle_train_stage2.ipynb  kaggle_train_stage3.ipynb
paper/: ablations.md  outline.md
src/: __init__.py  audio.py  dataset.py  features.py  loss.py  metrics.py  model.py  perch_teacher.py  pseudo_label.py  temporal.py  tf_utils.py  train.py  transforms.py  utils.py
tests/: test_dataset.py
