[project]
name = "birdclef2026"
version = "0.1.0"
description = "BirdCLEF 2026 Kaggle Competition + Research Paper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "kaggle>=1.5.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "tqdm>=4.65.0",
    "h5py>=3.8.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
]
